--- a/SheetMusic_Score_Project/configs/model/student.yaml
+++ b/SheetMusic_Score_Project/configs/model/student.yaml
@@ -5,3 +5,11 @@ arch: mobilenet_v3_small
 width_mult: 0.75
 num_classes: 3   # placeholder; derive from data at runtime
 pretrained: false
+
+# Teacher settings (used when train.kd.enabled=true)
+teacher:
+  name: cnn_resnet18       # cnn_resnet18 | cnn_efficientnet_b0 | cnn_mobilenet_v3_large | vit_b16 | vit_s16
+  pretrained: true
+  freeze: true
+  # Optional fine-tuned teacher checkpoint filename (saved/loaded under train.checkpoint_dir)
+  checkpoint: "teacher_best_cnn_resnet18.pt"
