--- a/SheetMusic_Score_Project/configs/model/student_mobilenetV3Small_teacher_resnet18.yaml
+++ b/SheetMusic_Score_Project/configs/model/student_mobilenetV3Small_teacher_resnet18.yaml
@@ -2,6 +2,7 @@
 
 # Student model configuration for the initial pipeline.
 
+
 arch: mobilenet_v3_small
 width_mult: 0.75
 # num_classes: 3   # placeholder; derive from data at runtime
@@ -11,6 +12,6 @@ pretrained: false
 teacher:
   name: cnn_resnet18       # cnn_resnet18 | cnn_efficientnet_b0 | cnn_mobilenet_v3_large | vit_b16 | vit_s16
   pretrained: true
-  freeze: false
+  freeze: true
   # Optional fine-tuned teacher checkpoint filename (saved/loaded under train.checkpoint_dir)
   checkpoint: "teacher_resnet18_best.pt"
