--- a/SheetMusic_Score_Project/pyproject.toml
+++ b/SheetMusic_Score_Project/pyproject.toml
@@ -1,10 +1,26 @@
 [project]
 name = "sheetmusic-score-project"
 version = "0.1.0"
-description = "Add your description here"
+description = "Audio → Score (multi-track MIDI/MusicXML) mini project"
 readme = "README.md"
 requires-python = ">=3.10"
-dependencies = []
+dependencies = [
+    "librosa>=0.10",
+    "soundfile>=0.12",
+    "hydra-core>=1.3",
+    "mlflow>=2.10",
+    "omegaconf>=2.3",
+    "basic-pitch>=0.2.0",
+    "pretty_midi>=0.2.10",
+]
+
+[project.optional-dependencies]
+separation = ["demucs>=4.0"]
+export = ["music21>=9.1"]
+transcription = [
+    "torchcrepe>=0.0.23",
+    "piano_transcription_inference>=0.0.5",
+]
 
 [dependency-groups]
 dev = [
@@ -18,29 +34,20 @@ dev = [
 
     "torchcodec>=0.1.0",
 
-
     "hydra-core>=1.3",
     "mlflow>=2.10",
     "omegaconf>=2.3",
 
-
     "torchmetrics>=1.4",
     "thop>=0.1.1.post2209072238",
-
 
     "torch-audiomentations>=0.11",
     "audiomentations>=0.37",
 
-
     "transformers>=4.44",
     "timm>=1.0.9",
 
-
-
-
     "jupyterlab>=4.2",
-
-
     "black>=24.3",
     "isort>=5.13"
 ]
